# fastobo-py

./: .appveyor.yml  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  COPYING  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  requirements.txt  test.yml
ci/: requirements.txt
ci/appveyor/: deploy.ps1  install.ps1
ci/travis/: deploy.sh
ci/travis/linux/: before_install.sh  tarpaulin.sh
ci/travis/manylinux/: _after_success.sh  _script.sh  after_success.sh  before_install.sh  install.sh  script.sh
ci/travis/osx/: after_success.sh  before_cache.sh  install.sh  script.sh
derive/: Cargo.toml  lib.rs
docs/: .readthedocs.yaml  conf.py  index.rst  install.rst  requirements.txt
docs/_static/json/: switcher.json
docs/api/: abc.rst  base.rst  doc.rst  exceptions.rst  header.rst  id.rst  index.rst  pv.rst  qual.rst  syn.rst  term.rst  typedef.rst  xref.rst
docs/examples/: descriptions.ipynb  graph.ipynb  index.rst  obsolete.ipynb
docs/guide/: about.rst  index.rst  install.rst  publications.rst
src/: build.rs  built.rs  date.rs  error.rs  iter.rs  lib.rs  macros.rs  pyfile.rs  utils.rs
src/py/: abc.rs  base.rs  doc.rs  entity.rs  exceptions.rs  id.rs  mod.rs  pv.rs  qual.rs  syn.rs  xref.rs
src/py/header/: clause.rs  frame.rs  mod.rs
src/py/instance/: frame.rs  mod.rs
src/py/term/: clause.rs  frame.rs  mod.rs
src/py/typedef/: clause.rs  frame.rs  mod.rs
tests/: __init__.py  common.py  test_doc.py  test_doctests.py  test_fastobo.py  test_header.py  test_id.py  test_pv.py  test_qualifier.py  test_term.py  test_typedef.py  test_xref.py  unittest.rs  unittests.rs
tests/data/: .gitignore
