[workspace]
members = ["derive"]

[package]
name = "fastobo-py"
version = "0.10.1"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
license = "MIT"
publish = false
build = "src/build.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "fastobo_py"
doctest = false

[dev-dependencies]
lazy_static = "1.4.0"

[build-dependencies]
built = { version  = "0.4.1", features = ["chrono"] }

[dependencies]
libc = "0.2.94"
pyo3-built = "0.4.5"
pest = "=2.1.3"
[dependencies.pyo3]
version = "0.13.2"
[dependencies.fastobo]
version = "0.13.1"
features = ["threading", "smartstring"]
[dependencies.fastobo-graphs]
version = "0.4.3"
features = ["obo"]
[dependencies.fastobo-py-derive-internal]
version = "0.10.1"
path = "./derive"

[features]
default = []
extension-module = ["pyo3/extension-module"]
nightly = ["pyo3/nightly"]
