[metadata]
name = fastobo
version = 0.12.3
author = Martin Larralde
author_email = martin.larralde@embl.de
home_page = https://github.com/fastobo/fastobo-py
description = Faultless AST for Open Biomedical Ontologies in Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = ontologies, ontology, obo, obofoundry, parser, syntax, ast
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Rust
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/fastobo/fastobo-py/issues
    Changelog = https://fastobo.readthedocs.io/en/latest/changes.html
    Documentation = https://fastobo.readthedocs.io/en/latest/
    Conda Recipe = https://anaconda.org/bioconda/fastobo

[options]
zip_safe = false
test_suite = tests
python_requires = >= 3.7
setup_requires =
    setuptools >=39.2
    setuptools-rust >= 1.0

[bdist_wheel]
universal = false

[build_rust]
release = true
