[package]
name = "fastobo-py-derive-internal"
version = "0.7.1"
authors = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
edition = "2018"
publish = false
workspace = ".."

[lib]
proc-macro = true
path = "lib.rs"

[dependencies.syn]
version = "1.0"
features = ["extra-traits"]
[dependencies.quote]
version = "1.0"
