[package]
name = "fastobo-py-derive-internal"
version = "0.9.2"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2018"
publish = false
workspace = ".."

[lib]
proc-macro = true
path = "lib.rs"

[dependencies.syn]
version = "1.0"
default-features = false
features = ["derive", "clone-impls", "parsing", "printing", "proc-macro"]
[dependencies.quote]
version = "1.0"
[dependencies.proc-macro2]
version = "1.0"
